--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.2",
+    "@trpc/server": "^10.45.0",
     "axios": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "~4.18.1",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2",
+    "tslib": "^2.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nx/esbuild": "17.2.7",
