Building a front-end base for the site that includes a dashboard with a connection page with tailwind

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/front"
+        "outputPath": "dist/apps/front",
+        "postcssConfig": "apps/front/postcss.config.js"
       },
       "configurations": {
         "development": {
