--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@swc/helpers": "~0.5.2",
+    "@trpc/client": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "axios": "^1.0.0",
     "cors": "^2.8.5",
@@ -13,6 +18,7 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.21.1",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
     "tslib": "^2.3.0",
@@ -24,8 +30,9 @@
     "@nx/eslint-plugin": "17.2.7",
     "@nx/jest": "17.2.7",
     "@nx/js": "17.2.7",
+    "@nx/next": "^17.2.8",
     "@nx/node": "17.2.7",
-    "@nx/react": "^17.2.7",
+    "@nx/react": "^17.2.8",
     "@nx/vite": "17.2.7",
     "@nx/workspace": "17.2.7",
     "@swc-node/register": "~1.6.7",
@@ -42,6 +49,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "~0.34.6",
     "@vitest/ui": "~0.34.6",
+    "autoprefixer": "^10.4.16",
     "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -54,6 +62,7 @@
     "jsdom": "~22.1.0",
     "nx": "17.2.7",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
