--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "axios": "^1.0.0",
     "cors": "^2.8.5",
     "express": "~4.18.1",
+    "leaflet": "^1.9.4",
+    "ol": "^8.2.0",
     "pg": "^8.11.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
+    "rlayers": "^2.2.0",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
     "tslib": "^2.3.0",
@@ -41,6 +46,7 @@
     "@testing-library/react": "14.0.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
