--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.0.0",
     "cors": "^2.8.5",
     "express": "~4.18.1",
+    "jotai": "^2.6.1",
     "leaflet": "^1.9.4",
     "ol": "^8.2.0",
     "pg": "^8.11.3",
