--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
@@ -17,8 +18,10 @@
     "express": "~4.18.1",
     "jotai": "^2.6.1",
     "leaflet": "^1.9.4",
+    "morgan": "^1.10.0",
     "ol": "^8.2.0",
     "pg": "^8.11.3",
+    "postgraphile": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -34,13 +37,17 @@
     "@nx/esbuild": "17.2.7",
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
-    "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
+    "@nx/express": "^17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
     "@nx/next": "^17.2.8",
-    "@nx/node": "17.2.7",
+    "@nx/node": "17.2.8",
     "@nx/react": "^17.2.8",
     "@nx/vite": "17.2.7",
+    "@nx/webpack": "17.2.8",
     "@nx/workspace": "17.2.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -69,10 +76,12 @@
     "jsdom": "~22.1.0",
     "nx": "17.2.7",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
+    "url-loader": "^4.1.1",
     "vite": "^5.0.0",
     "vitest": "~0.34.6"
   }
