--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     },
     "peacock.color": "#61dafb",
     "cSpell.words": [
-        "Dharmachakra"
+        "Dharmachakra",
+        "geoloc"
     ]
 }
