--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@trpc/client": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "axios": "^1.0.0",
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "~4.18.1",
     "jotai": "^2.6.1",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "morgan": "^1.10.0",
     "ol": "^8.2.0",
     "pg": "^8.11.3",
